# markdown-formula-parser

./: Cargo.toml  README.md
examples/: absolute_value_test.rs  arithmetic_examples.rs  calculus_examples.rs  complex_examples.rs  derivative_examples.rs  fractions_roots_examples.rs  functions_examples.rs  markdown_parsing_examples.rs  matrix_examples.rs  negative_examples.rs  power_subscript_examples.rs  simple_abs_test.rs  special_commands_examples.rs
src/: ast.rs  lexer.rs  lib.rs  main.rs  parser.rs
